--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ghost-stories",
   "version": "0.0.1",
   "description": "A small utility library that leverages folktale to make handling resources easier.",
-  "main": "lib/index.js",
+  "main": "dist/bundle.min.js",
   "files": [
-    "lib/"
+    "dist/"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c",
+    "prepare": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,23 @@
   },
   "homepage": "https://github.com/galileopy/ghost-stories#readme",
   "dependencies": {
-    "folktale": "^2.3.2"
+    "folktale": "^2.3.2",
+    "ramda": "^0.27.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@rollup/plugin-babel": "^5.0.3",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@types/jest": "^26.0.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "jest": "^26.0.1",
+    "rollup": "^2.17.0",
+    "typescript": "^3.9.5"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "rxjs": "^6.5.5"
   }
 }
