--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "build": "browserify -t [ babelify --presets [ @babel/preset-env @babel/preset-react ] ] -o dist/bundle.min.js",
-    "prepare": "build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
