--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.1",
     "jest": "^26.0.1",
+    "react": "^16.13.1",
     "rollup": "^2.17.0",
+    "rxjs": "^6.5.5",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
