--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A small utility library that leverages folktale to make handling resources easier.",
   "main": "dist/bundle.min.js",
   "files": [
-    "dist/"
+    "dist/*"
   ],
   "scripts": {
     "test": "jest",
