--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/bundle.min.js",
   "module": "src/index.js",
   "files": [
-    "dist/*"
+    "dist/*",
+    "src/*"
   ],
   "scripts": {
     "test": "jest",
