--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@babel/preset-react": "^7.10.1",
     "@types/jest": "^26.0.0",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.2",
     "jest": "^26.0.1",
     "react": "^16.13.1",
     "rxjs": "^6.5.5",
