--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.22",
   "description": "A small utility library that leverages folktale to make handling resources easier.",
   "main": "dist/bundle.min.js",
-  "module": "src/index.js",
   "files": [
-    "dist/*",
-    "src/*"
+    "dist/*"
   ],
   "scripts": {
     "test": "jest",
