--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ghost-stories",
   "version": "0.0.23",
   "description": "A small utility library that leverages folktale to make handling resources easier.",
-  "main": "dist/bundle.min.js",
+  "main": "dist/index.js",
   "files": [
     "dist/*"
   ],
