--- a/package.json
+++ b/package.json
@@ -32,17 +32,26 @@
     "ramda": "^0.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
-    "@types/jest": "^26.0.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.7",
+    "@types/ramda": "^0.27.13",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.2",
     "jest": "^26.0.1",
     "react": "^16.13.1",
     "rxjs": "^6.5.5",
-    "typescript": "^3.9.5",
+    "ts-loader": "^8.0.1",
+    "ts-toolbelt": "^6.13.34",
+    "typescript": "^3.9.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
